// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "CodeCommitDependencyCheckCheckProject490B8892": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"wget -O public-key.asc https://bintray.com/user/downloadSubjectPublicKey?username=jeremy-long\\",
        \\"gpg --keyid-format long --list-options show-keyring public-key.asc\\",
        \\"gpg --import public-key.asc\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.2-release.zip\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.2-release.zip.asc\\",
        \\"gpg --verify dependency-check-5.3.2-release.zip.asc dependency-check-5.3.2-release.zip\\",
        \\"unzip dependency-check-5.3.2-release.zip -d /opt\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"echo \\\\\\"No preCheckCommand!\\\\\\"\\",
        \\"SHA=$(git rev-parse HEAD)\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"echo \\\\\\"[===== SHA: $SHA =====]\\\\\\"\\",
        \\"mkdir reports\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1\\\\\\" --failOnCVSS 0 --junitFailOnCVSS 0 --prettyPrint --format HTML --format JUNIT --out reports\\"
      ],
      \\"finally\\": [
        \\"echo \\\\\\"[===== Upload reports =====]\\\\\\"\\",
        \\"dt=$(date -u '+%Y_%m_%d_%H_%M')\\",
        \\"echo \\\\\\"No reportsBuckets\\\\\\"\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodeCommitDependencyCheckCheckProjectEventsRoleDefaultPolicy3E8344B4": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CodeCommitDependencyCheckCheckProject490B8892",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodeCommitDependencyCheckCheckProjectEventsRoleDefaultPolicy3E8344B4",
        "Roles": Array [
          Object {
            "Ref": "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodeCommitDependencyCheckCheckProjectRoleDefaultPolicyD92593DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                    },
                    "-*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodeCommitDependencyCheckCheckProjectRoleDefaultPolicyD92593DA",
        "Roles": Array [
          Object {
            "Ref": "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodeCommitDependencyCheckScheduleRule65A51424": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "CodeCommitDependencyCheckCheckProject490B8892",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`events 1`] = `
Object {
  "Resources": Object {
    "CheckTopic79759998": Object {
      "Type": "AWS::SNS::Topic",
    },
    "CheckTopicPolicyF0CF133A": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "CheckTopic79759998",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "CheckTopic79759998",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "CodeCommitDependencyCheckCheckProject490B8892": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"wget -O public-key.asc https://bintray.com/user/downloadSubjectPublicKey?username=jeremy-long\\",
        \\"gpg --keyid-format long --list-options show-keyring public-key.asc\\",
        \\"gpg --import public-key.asc\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.2-release.zip\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.2-release.zip.asc\\",
        \\"gpg --verify dependency-check-5.3.2-release.zip.asc dependency-check-5.3.2-release.zip\\",
        \\"unzip dependency-check-5.3.2-release.zip -d /opt\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"echo \\\\\\"No preCheckCommand!\\\\\\"\\",
        \\"SHA=$(git rev-parse HEAD)\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"echo \\\\\\"[===== SHA: $SHA =====]\\\\\\"\\",
        \\"mkdir reports\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1\\\\\\" --failOnCVSS 0 --junitFailOnCVSS 0 --prettyPrint --format HTML --format JUNIT --out reports\\"
      ],
      \\"finally\\": [
        \\"echo \\\\\\"[===== Upload reports =====]\\\\\\"\\",
        \\"dt=$(date -u '+%Y_%m_%d_%H_%M')\\",
        \\"echo \\\\\\"No reportsBuckets\\\\\\"\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodeCommitDependencyCheckCheckProjectEventsRoleDefaultPolicy3E8344B4": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CodeCommitDependencyCheckCheckProject490B8892",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodeCommitDependencyCheckCheckProjectEventsRoleDefaultPolicy3E8344B4",
        "Roles": Array [
          Object {
            "Ref": "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodeCommitDependencyCheckCheckProjectRoleDefaultPolicyD92593DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                    },
                    "-*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodeCommitDependencyCheckCheckProjectRoleDefaultPolicyD92593DA",
        "Roles": Array [
          Object {
            "Ref": "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodeCommitDependencyCheckCheckProjectfailed08FAF287": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "FAILED",
            ],
            "project-name": Array [
              Object {
                "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CodeCommitDependencyCheckCheckProjectstartedA3213349": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "IN_PROGRESS",
            ],
            "project-name": Array [
              Object {
                "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CodeCommitDependencyCheckCheckProjectsucceeded4A50E207": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "SUCCEEDED",
            ],
            "project-name": Array [
              Object {
                "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "CheckTopic79759998",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "CodeCommitDependencyCheckScheduleRule65A51424": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "CodeCommitDependencyCheckCheckProject490B8892",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`preCheckCommand 1`] = `
Object {
  "Resources": Object {
    "CodeCommitDependencyCheckCheckProject490B8892": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Modes": Array [
            "LOCAL_CUSTOM_CACHE",
          ],
          "Type": "LOCAL",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:2.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": Object {
            "Fn::Join": Array [
              "",
              Array [
                "{
  \\"version\\": \\"0.2\\",
  \\"env\\": {
    \\"git-credential-helper\\": \\"yes\\"
  },
  \\"phases\\": {
    \\"install\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Install OWASP Dependency Check =====]\\\\\\"\\",
        \\"wget -O public-key.asc https://bintray.com/user/downloadSubjectPublicKey?username=jeremy-long\\",
        \\"gpg --keyid-format long --list-options show-keyring public-key.asc\\",
        \\"gpg --import public-key.asc\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.2-release.zip\\",
        \\"wget https://dl.bintray.com/jeremy-long/owasp/dependency-check-5.3.2-release.zip.asc\\",
        \\"gpg --verify dependency-check-5.3.2-release.zip.asc dependency-check-5.3.2-release.zip\\",
        \\"unzip dependency-check-5.3.2-release.zip -d /opt\\",
        \\"chmod +x /opt/dependency-check/bin/dependency-check.sh\\",
        \\"export PATH=\\\\\\"$PATH:/opt/dependency-check/bin\\\\\\"\\"
      ]
    },
    \\"pre_build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Clone repository: repo1 =====]\\\\\\"\\",
        \\"git clone \\\\\\"https://git-codecommit.",
                Object {
                  "Ref": "AWS::Region",
                },
                ".",
                Object {
                  "Ref": "AWS::URLSuffix",
                },
                "/v1/repos/repo1\\\\\\"\\",
        \\"cd repo1\\",
        \\"npm i\\",
        \\"SHA=$(git rev-parse HEAD)\\",
        \\"cd \${CODEBUILD_SRC_DIR}\\"
      ]
    },
    \\"build\\": {
      \\"commands\\": [
        \\"echo \\\\\\"[===== Scan repository: repo1 =====]\\\\\\"\\",
        \\"echo \\\\\\"[===== SHA: $SHA =====]\\\\\\"\\",
        \\"mkdir reports\\",
        \\"dependency-check.sh --version\\",
        \\"dependency-check.sh --project \\\\\\"repo1\\\\\\" --scan \\\\\\"repo1\\\\\\" --failOnCVSS 0 --junitFailOnCVSS 0 --prettyPrint --format HTML --format JUNIT --out reports\\"
      ],
      \\"finally\\": [
        \\"echo \\\\\\"[===== Upload reports =====]\\\\\\"\\",
        \\"dt=$(date -u '+%Y_%m_%d_%H_%M')\\",
        \\"echo \\\\\\"No reportsBuckets\\\\\\"\\"
      ]
    }
  },
  \\"reports\\": {
    \\"dependencyCheckReport\\": {
      \\"files\\": [
        \\"reports/dependency-check-junit.xml\\"
      ]
    }
  },
  \\"cache\\": {
    \\"paths\\": [
      \\"/opt/dependency-check/data/**/*\\"
    ]
  }
}",
              ],
            ],
          },
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodeCommitDependencyCheckCheckProjectEventsRoleDefaultPolicy3E8344B4": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CodeCommitDependencyCheckCheckProject490B8892",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodeCommitDependencyCheckCheckProjectEventsRoleDefaultPolicy3E8344B4",
        "Roles": Array [
          Object {
            "Ref": "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodeCommitDependencyCheckCheckProjectRoleDefaultPolicyD92593DA": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "CodeCommitDependencyCheckCheckProject490B8892",
                    },
                    "-*",
                  ],
                ],
              },
            },
            Object {
              "Action": Array [
                "codecommit:BatchGet*",
                "codecommit:Get*",
                "codecommit:Describe*",
                "codecommit:List*",
                "codecommit:GitPull",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codecommit:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":repo1",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CodeCommitDependencyCheckCheckProjectRoleDefaultPolicyD92593DA",
        "Roles": Array [
          Object {
            "Ref": "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CodeCommitDependencyCheckCheckProjectRoleFBCBA6E1": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "CodeCommitDependencyCheckScheduleRule65A51424": Object {
      "Properties": Object {
        "ScheduleExpression": "cron(0 4 * * ? *)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "CodeCommitDependencyCheckCheckProject490B8892",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "CodeCommitDependencyCheckCheckProjectEventsRole8D5979E4",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
